--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,9 +6,9 @@ EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 TransitionMap=
 bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
+TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/PROTO2/Blueprints/GameModeBP.GameModeBP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
