--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,3 +24,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/PREPROD_PROTO2")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/PREPROD_PROTO2")
 
+[/Script/Engine.RendererSettings]
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
+
