--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/PROTO2/Blueprints/GameModeBP.GameModeBP_C
 GlobalDefaultServerGameMode=None
+bOffsetPlayerGamepadIds=True
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
