Fix the master material

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=PREPROD_PROTO2
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/Maps/Environment.Environment
+GameDefaultMap=/Game/Maps/Environment.Environment
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Vertical
