Change the start map to environment with BPs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=PREPROD_PROTO2
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Environment.Environment
-GameDefaultMap=/Game/Maps/Environment.Environment
+EditorStartupMap=/Game/Maps/EnvironmentEditWithBPs.EnvironmentEditWithBPs
+GameDefaultMap=/Game/Maps/EnvironmentEditWithBPs.EnvironmentEditWithBPs
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Vertical
