dynamic navmesh in runtime, can block off ai with walls

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,3 +29,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.SkinCache.CompileShaders=True
 r.RayTracing=True
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
