fix enemy freeze in front of player issue

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/PROTO2/Blueprints/GameModeBP.GameModeBP_C
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
 bOffsetPlayerGamepadIds=True
 
