--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/PROTO2/Blueprints/GameModeBP.GameModeBP_C
 GlobalDefaultServerGameMode=None
 bOffsetPlayerGamepadIds=True
 
