--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=PREPROD_PROTO2
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/EnvironmentEditWithBPs.EnvironmentEditWithBPs
-GameDefaultMap=/Game/Maps/EnvironmentEditWithBPs.EnvironmentEditWithBPs
+GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Vertical
