--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=PREPROD_PROTO2
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/EnvironmentEditWithBPs.EnvironmentEditWithBPs
+EditorStartupMap=/Game/Maps/MainMenuMap.MainMenuMap
 GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 TransitionMap=
 bUseSplitscreen=True
